[project]
name = "pictest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Felix Soubelet", email = "felix.soubelet@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pictest = "pictest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
